# final-project-bheim

./: CHANGELOG.md  LICENSE  README.md  contact.txt  final-project-bheim.cabal  graph.dot  presentation.mov  report.txt
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: obsidian-graph-0.1.0.0-inplace.conf  package.cache
src/: Clusters.hs  GraphBuilder.hs  Metrics.hs  Neighbors.hs  Parser.hs  Paths.hs  Pretty.hs  Types.hs  Visualization.hs
test/test-files/: IO monad.md  algebraic data types.md  currying.md  filter.md  fold.md  fractals.md  function composition.md  functional programming.md  functors.md  haskell.md  higher order functions.md  immutability.md  lambda.md  lazy evaluation.md  map.md  math.md  maybe monad.md  monads.md  partial application.md  pattern matching.md  polymorphism.md  pure functions.md  recursion.md  referential transparency.md  testing.md  type inference.md  type systems.md
test/test-files/concepts/: closures.md  memoization.md  point free style.md  side effects.md  tail recursion.md
test/test-files/languages/: Clojure.md  Elm.md  Erlang.md  OCaml.md  Scala.md
test/test-files/typeclasses/: Eq typeclass.md  Functor typeclass.md  Monad typeclass.md  Ord typeclass.md  Show typeclass.md
