cabal-version: 3.0
name:          obsidian-graph
version:       0.1.0.0

executable obsidian-graph
    main-is:       Main.hs
    hs-source-dirs: app
    other-modules:
    build-depends:
        base >= 4.14,
        obsidian-graph

library
    exposed-modules:
        Types
        Parser
        GraphBuilder
        Metrics
        Neighbors
        --Clusters
        Paths
        --Visualization
        --PrettyPrint
    hs-source-dirs: src
    build-depends:
        base >= 4.14,
        containers,
        directory,
        filepath,
        process
    default-language: Haskell2010